@@ -36,4 +36,6 @@ changed memmove to memcpy in cache for xput improvement
 Profiles with weird curves are not prone to p`relinearization optimization.
 Added functions to retrieve formatters from transforms
 Fixed a bug that made crash black preservation on CMYK2CMYK devicelinks
-Added named color functionality 
+Added named color functionality
+Fixed a bug in black preservation and sligtly non-monotonic curves
+ 
